prepare to deploy

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -16,7 +16,7 @@ body {
   background-repeat: no-repeat;
   padding: 20px 0 30px 0;
 //  background-repeat: repeat;
-  font-family: 微软雅黑, "Microsoft YaHei", Helvetica, Tahoma, StSun, 宋体, SimSun, sans-serif;
+  font-family: "Microsoft YaHei", Helvetica, Tahoma, StSun, SimSun, sans-serif;
 }
 
 section {
