prepare to edit layout

--- a/app/assets/stylesheets/characters.css.scss
+++ b/app/assets/stylesheets/characters.css.scss
@@ -2,6 +2,12 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+.box {
+  .details {
+    min-height: 100px;
+  }
+}
+
 .accordion {
   .accordion-group {
     border: 2px solid lighten($backgroud-color, 20%);
