use record_at istead of created_at repush

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -15,7 +15,7 @@ body {
   background-size: 100%;
   background-repeat: no-repeat;
   padding: 20px 0 30px 0;
- background-repeat: repeat;
+ /* background-repeat: repeat; */
   font-family: "Microsoft YaHei", Helvetica, Tahoma, StSun, SimSun, sans-serif;
 }
 
