--- a/app/views/layouts/_header.slim
+++ b/app/views/layouts/_header.slim
@@ -1,6 +1,7 @@
 .logo
   header
-    = image_tag "orc_1.jpg", class: "hell"
+    = link_to root_path do
+      = image_tag "orc_1.jpg", class: "hell"
     / = link_to root_path do
       h1 魔兽世界英雄榜记录器
       br
