--- a/app/views/home/faq.html.slim
+++ b/app/views/home/faq.html.slim
@@ -1,12 +1,30 @@
-.row
-  == render 'logo'
-  .span8
-    .box
-      header
-        h1 FAQ
-      section
-        dl
-          dt 这个网站是做什么的？
-          dd 回答
-          dt 为什么会有这个网站？
-          dd 回答
+.faq
+  .row
+    == render 'logo'
+    .span8
+      .box
+        header
+          h1 FAQ
+        section
+          dl
+            dt Q: 这个网站是干什么的？
+            dd A: 魔兽世界英雄榜记录器会记录所有登记过角色每日的英雄榜变化，以便让玩家可以查看角色的成长历史。
+            dt Q: 为什么有这个网站？
+            dd A: 每一个角色都有自己成长的历史，但目前玩家没有任何方法可以方便将其记录下来。英雄榜中包含了角色的完整信息，如果能把每一天英雄榜的变动都记录下来，不就可以在以后查看角色过去某日的历史了吗？所以才有了这个网站。
+            dt Q: 为什么我可以登记别人的角色（别人可以登记我的角色）？
+            dd A: 在这里你可以登记任何的角色，即使是别人的也可以（当然别人也可以登记你的角色）。这没有什么不好，角色越早被登记，该角色的英雄榜就可以越早的被记录下来，对玩家来说应该是没有坏处的。
+            dt Q: 为什么我无法登记我的角色？
+            dd A: 服务器或角色名没有选对，或者角色太久没有活动导致处于冻结状态。
+            dt Q: 为什么将鼠标放到物品上无法显示物品的详细信息？
+            dd A: 目前从技术上来说暂时无法解决这个问题，要查看详细信息目前只能点击进入官方网站常看。
+            dt Q: 这里的数据英雄榜记录每天几天更新？
+            dd A: 早上七点整。
+            dt Q: 官方不是不允许第三方收集战网信息吗？
+            dd
+              | A: 在
+              = link_to "《战网使用条款》", "http://www.battlenet.com.cn/zh/legal-cn/tou", target: "_blank"
+              | 中官方明确提出了在未经许可的情况下不允许私自收集战网信息。不过就跟第二条所说的一样，官方在记录角色活动历史这方面做的十分薄弱，虽然可能是有侵犯官方使用条款的嫌疑，但是这应该还是很有意义的。而且本站也保证
+              strong 不会
+              | 在这里添加广告等盈利的内容。
+            dt Q: 为什么这么多兽人？
+            dd A: 因为作者是兽人控。
