--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -12,7 +12,7 @@
       == render :partial => 'box', :locals => { :chars => @new_chars, :title => "最新登记角色" }
   .span4
     .box
-      == render :partial => 'box', :locals => { :chars => @active_chars, :title => "最活跃角色" , :desc_partial => "histories"}
+      == render :partial => 'box', :locals => { :chars => @active_chars, :title => "记录最多角色" , :desc_partial => "histories"}
   .span4
     .box
       == render :partial => 'box', :locals => { :chars => @leveling_chars, :title => "成长中角色", :desc_partial => "level" }
