--- a/app/views/layouts/_footer.slim
+++ b/app/views/layouts/_footer.slim
@@ -1,9 +1,9 @@
 footer
   .box
     ul
-      li = link_to "About", about_path
+      li = link_to "首页", root_path
       li = link_to "FAQ", faq_path
-      li = link_to "Changelog", changelog_path
+      / li = link_to "Changelog", changelog_path
       li = link_to "留言簿", guestbook_path
       li.pull-right
         | 本站所有英雄榜数据皆来自于
