--- a/app/views/characters/show.html.slim
+++ b/app/views/characters/show.html.slim
@@ -2,7 +2,7 @@
   .span4
     == render 'layouts/header'
   .span8
-    - if flash.any?
+    - if flash[:notice]
       .box
         = notice_message
 
