--- a/app/views/home/_form.html.slim
+++ b/app/views/home/_form.html.slim
@@ -9,4 +9,4 @@
 - if flash.any?
   = notice_message
 - else
-  p 首被查看的角色需要进行登记操作，该操作大约需要花费8-10秒的时间，请耐心等候
+  p 首次被查看的角色需要进行登记操作，该操作大约需要花费8-10秒的时间，请耐心等候
