--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -1,7 +1,7 @@
 doctype html
 html
   head
-    title Armory Musume
+    title 魔兽世界英雄榜记录器
     meta name="keywords" content="wow armory"
     = stylesheet_link_tag    "application", :media => "all"
     = javascript_include_tag "application"
