fixed name uniqueness bug and successful message

--- a/app/assets/stylesheets/characters.css.scss
+++ b/app/assets/stylesheets/characters.css.scss
@@ -8,6 +8,18 @@
   }
 }
 
+.successful {
+  color: #468847;
+  h3 {
+    margin-bottom: 5px;
+  }
+  p {
+    font-weight: bold;
+    margin-bottom: 0;
+  }
+  
+}
+
 .accordion {
   .accordion-group {
     .accordion-toggle {
