--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -2,10 +2,14 @@ doctype html
 html
   head
     title 魔兽世界英雄榜记录器
+    meta charset="utf-8"
     meta name="keywords" content="wow armory"
+    meta http-equiv="X-UA-Compatible" content="IE=edge"
+
     = stylesheet_link_tag    "application", :media => "all"
     /[ if lt IE 9 ]
       link href='/iefix.css' media='screen' rel='stylesheet' type='text/css'
+      script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"
     = javascript_include_tag "application"
     = csrf_meta_tags
   body
