--- a/app/views/home/faq.html.slim
+++ b/app/views/home/faq.html.slim
@@ -30,3 +30,7 @@
               | 在这里添加广告等盈利的内容。
             dt Q: 为什么这么多兽人？
             dd A: 因为作者是兽人控。
+        footer
+          p.pull-right
+            | by 
+            = link_to "@willmouse", "http://twitter.com/willmouse", target: "_blank"
