save profiloe_wrppaer to local

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -215,6 +215,9 @@ footer {
       &:last-child {
         border-left: none;
       }
+      &.last-child {
+        border-left: none;
+      }
     }
     margin-bottom: 0;
     @include clearfix;
