--- a/app/views/home/faq.html.slim
+++ b/app/views/home/faq.html.slim
@@ -19,8 +19,8 @@
             dd A: 目前从技术上来说暂时无法解决这个问题，要查看详细信息目前只能点击进入官方网站常看。
             dt Q: 为什么角色头像有时会不显示？
             dd A: 因为官方限制了短时间内用户可以请求的头像数量，所以有时候一次没办法获得全部的头像，所以会显示为默认头像，此时多刷新几次即可。
-            dt Q: 这里的数据英雄榜记录每天几天更新？
-            dd A: 早上七点整。
+            dt Q: 这里的英雄榜记录每天几天更新？
+            dd A: 每天早上七点整。
             dt Q: 官方不是不允许第三方收集战网信息吗？
             dd
               | A: 在
