--- a/app/views/layouts/_footer.slim
+++ b/app/views/layouts/_footer.slim
@@ -5,7 +5,7 @@ footer
       li = link_to "FAQ", faq_path
       / li = link_to "Changelog", changelog_path
       li = link_to "留言簿", guestbook_path
-      li.pull-right
+      li.last-child.pull-right
         | 本站所有英雄榜数据皆来自于
         = link_to "魔兽世界（中国）", "http://www.battlenet.com.cn/wow/zh/"
       
