--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -11,7 +11,7 @@ html {
 body {
   color: #F7F7F7;
  /* background-image: url("tasky_pattern.png"); */
-  background: url("wow4.jpg");
+  background: url("wow.jpg");
   background-size: 100%;
   background-repeat: no-repeat;
   padding: 20px 0 30px 0;
