--- a/app/views/layouts/_header.slim
+++ b/app/views/layouts/_header.slim
@@ -1,4 +1,4 @@
 .logo
   header
     = link_to root_path do
-      = image_tag "orc_1.jpg", class: "hell"
+      = image_tag "orc.jpg", class: "hell"
