--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -13,6 +13,8 @@ body {
  /* background-image: url("tasky_pattern.png"); */
   background: url("wow.jpg");
   background-size: 100%;
+  /* -moz-background-size: 100%; */
+  /* -webkit-background-size: 100%; */
   background-repeat: no-repeat;
   padding: 20px 0 30px 0;
  /* background-repeat: repeat; */
