--- a/app/views/characters/_collapse.slim
+++ b/app/views/characters/_collapse.slim
@@ -1,5 +1,5 @@
 .accordion#accordion2
-  - char.histories.order("record_at DESC").group_by{|t| "#{t.record_at.year} #{t.record_at.month}"}.each_with_index do |(date, t), i|
+  - char.histories.order("record_at").group_by{|t| "#{t.record_at.year} #{t.record_at.month}"}.each_with_index do |(date, t), i|
     .accordion-group
       .accordion-heading
         a.accordion-toggle data-toggle="collapse" data-parent="#accordion2" href="#collapse#{i+1}"= format_date(date)
