--- a/app/views/home/_box.html.slim
+++ b/app/views/home/_box.html.slim
@@ -3,13 +3,5 @@ header
 section
   ul.char-list
     - chars.each do |char|
-      li
-        = link_to char do
-          = image_tag "#{char.thumbnail}?alt=/wow/static/images/2d/avatar/2-0.jpg", size: "50x50", class: "pull-left thumb rounder"
-        span.pull-left.server = char.server
-        strong = link_to char.name, char, class: "pull-left"
-        br
-        span.pull-left.race[class="#{char.klass_color}"] = char.race
-        span.pull-left.klass[class="#{char.klass_color}"] = char.klass
-        -if defined? desc_partial
-          == render :partial => "#{desc_partial}", :locals => { :char => char }
+      == render :partial => "shared/char_list", :locals => { :char => char, :desc_partial => desc_partial }
+
