--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -12,7 +12,7 @@
       == render :partial => 'box', :locals => { :chars => @new_chars, :title => "最新登记角色" , :desc_partial => nil }
   .span4
     .box
-      == render :partial => 'box', :locals => { :chars => @active_chars, :title => "记录最多角色", :desc_partial => "histories" }
+      == render :partial => 'box', :locals => { :chars => @leveling_chars, :title => "成长中角色", :desc_partial => "level" }
   .span4
     .box
-      == render :partial => 'box', :locals => { :chars => @leveling_chars, :title => "成长中角色", :desc_partial => "level" }
+      == render :partial => 'box', :locals => { :chars => @random_chars, :title => "随便看看", :desc_partial => "random" }
