add guild color

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -150,6 +150,9 @@ section {
     &.right {
       float: right;
     }
+    &.guild {
+      color: #FFB100;
+    }
     &.achievements {
       display: inline-block;
       padding-left: 12px;
