add fragment cache

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -16,4 +16,5 @@ html
     .container
       .wrapper
         = yield
-        == render 'layouts/footer'
+        - cache "footer" do
+          == render 'layouts/footer'
