--- a/app/views/home/_form.html.slim
+++ b/app/views/home/_form.html.slim
@@ -1,11 +1,10 @@
-/ h4.instruction 选择服务器后，输入角色名称
-
-= simple_form_for @char, defaults: { required: false }, :html => { :class => 'form-inline' } do |f|
-  = f.input :server, :collection => REALM::SERVER, :label => false, :as => :grouped_select, :group_method => :last, :input_html => { "data-placeholder" => "选择角色所在服务器" }
-  = f.input :name, :label => false, :placeholder => "输入角色名称"
-  .control-group
-    .controls
-      = f.button :submit, "查看", :id => "search_char", "data-loading-text" => "查询中..."
+- cache "form" do
+  = simple_form_for @char, defaults: { required: false }, :html => { :class => 'form-inline' } do |f|
+    = f.input :server, :collection => REALM::SERVER, :label => false, :as => :grouped_select, :group_method => :last, :input_html => { "data-placeholder" => "选择角色所在服务器" }
+    = f.input :name, :label => false, :placeholder => "输入角色名称"
+    .control-group
+      .controls
+        = f.button :submit, "查看", :id => "search_char", "data-loading-text" => "查询中..."
 - if flash.any?
   = notice_message
 - else
