--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -7,9 +7,10 @@
         section
           = render 'form'
 .row
-  .span4
-    .box
-      == render :partial => 'box', :locals => { :chars => @new_chars, :title => "最新登记角色" , :desc_partial => nil }
+  - cache "new_chars" do
+    .span4
+      .box
+        == render :partial => 'box', :locals => { :chars => @new_chars, :title => "最新登记角色" , :desc_partial => nil }
   .span4
     .box
       == render :partial => 'box', :locals => { :chars => @leveling_chars, :title => "成长中角色", :desc_partial => "level" }
