add tooltip to char name

--- a/app/views/shared/_char_list.html.slim
+++ b/app/views/shared/_char_list.html.slim
@@ -2,7 +2,7 @@ li
   = link_to char do
     = image_tag "#{char.thumbnail}?alt=/wow/static/images/2d/avatar/2-0.jpg", size: "50x50", class: "pull-left thumb rounder"
   span.pull-left.server = char.server
-  strong = link_to char.name, char, class: "pull-left"
+  strong = link_to char.name, char, class: "pull-left char-name", rel: "tooltip", title: "最后更新于 #{char.last_update}"
   br
   span.pull-left.race[class="#{char.klass_color}"] = char.race
   span.pull-left.klass[class="#{char.klass_color}"] = char.klass
