--- a/app/views/characters/show.html.slim
+++ b/app/views/characters/show.html.slim
@@ -28,4 +28,5 @@
     .span8
       .box
         .details
-          == render :partial => 'collapse', :locals => { :char => @char }
+          - cache "#{@char}-collapse", :expires_in => 12.hours do
+            == render :partial => 'collapse', :locals => { :char => @char }
