--- a/app/views/characters/show.html.slim
+++ b/app/views/characters/show.html.slim
@@ -28,5 +28,5 @@
     .span8
       .box
         .details
-          - cache "#{@char}-collapse", :expires_in => 12.hours do
+          - cache "#{@char.name}-collapse", :expires_in => 12.hours do
             == render :partial => 'collapse', :locals => { :char => @char }
